--- a/css/main.css
+++ b/css/main.css
@@ -402,6 +402,94 @@ progress{
       width: 23%;
 }
 
+/* 作品集 */
+.portfolio-design-area{
+    width: 75%;
+    height: 100vh;
+    position: relative;
+    left: 25%;
+    padding: 80px 80px 80px 40px;
+    box-sizing: border-box;
+}
+
+.portfolio-design-box{
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 0 5px #4343432e;
+    font-size: 0;
+}
+
+.portfolio-design-photo{
+    width: 65%;
+    height: 100%;
+    display: inline-block;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center center;
+}
+.portfolio-design-photo img{
+    height: 100%;
+}
+
+.portfolio-design-list{
+    width: 30%;
+    height: 100%;
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+    position: relative;
+}
+
+.portfolio-design-list ul{
+    text-align: left;
+}
+
+.portfolio-design-list li{
+    box-sizing: border-box;
+    padding: 25px 20px;
+    line-height: 35px;
+    position: relative;
+    cursor: pointer;
+}
+
+.portfolio-design-list li a{
+    font-size: 16px;
+    text-decoration: none;
+    display: block;
+    color: #444B59;
+
+}
+
+.portfolio-design-list li img{
+    width: 30px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    right: 3%;
+}
+
+.portfolio-design-list li.active{
+    background-color: #edeef0;
+}
+
+.portfolio-design-list li:hover{
+    background-color: #eaeff5;
+}
+
+.portfolio-design-list h5{
+    font-size: 20px;
+    font-weight: 500;
+}
+.portfolio-design-list p{
+    font-size: 16px;
+}
+
+
 @media screen and (max-width:1366px) {
     .portfolio-develop-card {
         height: 40vh;
