--- a/css/main.css
+++ b/css/main.css
@@ -191,6 +191,7 @@ body {
     width: 90%;
     padding: 3%;
     box-sizing: border-box;
+    margin: auto;
 }
 
 .bannet-text-right h3 {
@@ -496,5 +497,84 @@ progress{
     }
     .portfolio-prototype-card {
         width: 45%;
+    }
+}
+
+
+@media screen and (max-width:500px){
+    body{
+        min-width: 100%;
+    }
+    .bannet-text-left{
+        display: none;
+    }
+    .bannet-text-right{
+        top: 10%;
+        left: 0;
+    }
+    .portfolio-menu{
+        width: 100%;
+        height: auto;
+        box-sizing: border-box;
+        padding: 0;
+        z-index: 100;
+    }
+    .portfolio-list{
+        width: 100%;
+        height: auto;
+        margin: auto;
+        padding: 0;
+        overflow: auto;
+    }
+    .portfolio-list ul{
+        width: 130%;
+        display: table;
+        overflow: auto;
+        background: #4fa0bb;
+        box-sizing: border-box;
+        padding: 0 5%;
+    }
+    .portfolio-list ul li{
+        display: table-cell;
+        margin-right: 50px;
+        margin-bottom: 20px;
+    }
+    .portfolio-banner-area{
+        height: 100vh;
+    }
+    .resume-timeline::before{
+        height: 97%;
+        left: 16%;
+    }
+    .resume-block li .resume-Title{
+        font-size: 24px;
+        line-height: 40px;
+    }
+    .portfolio-resume-area .resumeSide{
+        display: none;
+    }
+    .resume-block-skill ul{
+        display: block;
+    }
+    .resume-block-skill li{
+        width: 100%;
+    }
+    .portfolio-design-area{
+        width: 100%;
+        height: auto;
+        left: 0;
+        padding: 50px 20px;
+    }
+    .portfolio-design-photo{
+        display: block;
+        width: 100%;
+        height: 40vh;
+    }
+
+    .portfolio-design-list{
+        width: 100%;
+    }
+    .portfolio-design-list li{
+        width: 100%;
     }
 }
