--- a/css/main.css
+++ b/css/main.css
@@ -543,12 +543,24 @@ progress{
     .portfolio-banner-area{
         height: 100vh;
     }
+
+    .portfolio-resume-area .resumeSection{
+        width: 100vw;
+    }
+
+    .resume-div{
+        margin-left: 25px;
+    }
+
+    .resume-block .resume-timeline li{
+        margin-left: 17%;
+    }
     .resume-timeline::before{
         height: 97%;
         left: 16%;
     }
     .resume-block li .resume-Title{
-        font-size: 24px;
+        font-size: 22px;
         line-height: 40px;
     }
     .portfolio-resume-area .resumeSide{
