更新：css調整某些電腦的版面會跑版的問題

--- a/css/main.css
+++ b/css/main.css
@@ -249,7 +249,7 @@ body {
     color: white;
     vertical-align: top;
     box-sizing: border-box;
-    padding: 3% 5%;
+    padding: 3% 5vw;
     background-color: #F1BD00;
 }
 
