--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ body {
 }
 
 .portfolio-banner-area {
-    background: url(../image/IMAG3262~2.jpg) no-repeat 50% 50%;
+    background: url(../image/IMAG3262~21.jpg) no-repeat 50% 50%;
     /* background: url(https://www.lcnet.com.tw/img/home/sq_background-01.png) no-repeat 50% 50%; */
     width: 100%;
     height: 1000px;
@@ -336,6 +336,10 @@ body {
     line-height: 45px;
 }
 
+.resume-timeline li.resume-before .resume-Title{
+    font-size: 20px;
+}
+
 .resume-block li .resume-date{
     font-size: 18px;
     color: #F1BD00;
@@ -355,7 +359,7 @@ body {
     box-sizing: border-box;
     box-shadow: 0 0 3px #2a2a2a33;
     border-radius: 15px;
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
 .resume-card h4{
@@ -397,12 +401,12 @@ progress{
 
 .resume-block-skill ul{
     display: flex;
-    justify-content:space-between;
+    justify-content:space-evenly;
 }
 
   .resume-block-skill li{
       flex: 0 0 2;
-      width: 23%;
+      width: 32%;
 }
 
 /* 作品集 */
@@ -445,6 +449,7 @@ progress{
     vertical-align: top;
     text-align: center;
     position: relative;
+    overflow: auto;
 }
 
 .portfolio-design-list ul{
