變更sample與new year的資訊與版面調整

--- a/css/design.css
+++ b/css/design.css
@@ -91,7 +91,7 @@ body {
     width: 75%;
     position: relative;
     left: 25%;
-    padding: 100px 25px 50px;
+    padding: 50px 25px;
     box-sizing: border-box;
 }
 
